<resources>
    <string name="app_name">CoLifeStore</string>
    <string name="title_home">首页</string>
    <string name="title_add">add</string>
    <string name="title_mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todoName">待办</string>
    <string name="dairyName">日记</string>
    <string name="aBookName">记账</string>
    <string name="holeName">树洞</string>


</resources>