<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.colifestote.ui.state.MainViewModel" />
        <variable
            name="click"
            type="com.example.colifestote.ui.page.MainFragment.ClickProxy" />
        <variable
            name="adapter1"
            type="androidx.recyclerview.widget.RecyclerView.Adapter" />
        <variable
            name="adapter2"
            type="androidx.recyclerview.widget.RecyclerView.Adapter" />
        <variable
            name="adapter3"
            type="androidx.recyclerview.widget.RecyclerView.Adapter" />
        <variable
            name="adapter4"
            type="androidx.recyclerview.widget.RecyclerView.Adapter" />
        <variable
            name="carouselAdapter"
            type="com.example.colifestote.ui.page.MainFragment.CarouselAdapter" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapse_layout"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

<!--                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />-->

                <androidx.constraintlayout.motion.widget.MotionLayout
                    android:id="@+id/motionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layoutDescription="@xml/fragment_home_scene">


                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/one"
                        android:layout_width="60dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="0dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:round="8dp" />

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/two"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/three"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:round="8dp" />

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/three"
                        android:layout_width="60dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="20dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:round="8dp" />

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/four"
                        android:layout_width="60dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/three"
                        app:layout_constraintTop_toTopOf="parent"
                        app:round="8dp" />

                    <androidx.constraintlayout.helper.widget.Carousel
                        android:id="@+id/carousel"
                        android:layout_width="match_parent"
                        adapter="@{carouselAdapter}"
                        android:layout_height="wrap_content"
                        app:carousel_backwardTransition="@id/backward"
                        app:carousel_firstView="@id/start"
                        app:carousel_forwardTransition="@id/forward"
                        app:carousel_infinite="true"
                        app:carousel_nextState="@id/next"
                        app:carousel_previousState="@id/previous"
                        app:constraint_referenced_ids="one,two,three,four" />

                </androidx.constraintlayout.motion.widget.MotionLayout>



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/toolbar"
                    drawable_radius="@{8}"
                    drawable_solidColor="@{0x88ffffff}"
                    drawable_strokeColor="@{0x33666666}"
                    drawable_strokeWidth="@{1}"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="37dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_menu"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="12dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:onClick="@{()->click.openMenu()}"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_menu_black_48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_app"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_add"
                        onClickWithDebouncing="@{()->click.add()}"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="12dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                initTabAndPage="@{vm.initTabAndPage}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabBackground="@color/white"
                app:tabIndicatorColor="@color/themeGray"
                app:tabIndicatorHeight="4dp"
                app:tabSelectedTextColor="@color/themeGreen"
                app:tabTextColor="@color/themeGray">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todoName" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aBookName" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holeName" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dairyName" />

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            setOffscreenPageLimit="@{4}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv1"
                adapter="@{adapter1}"
                submitList="@{vm.todoList}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:background="#AE850D"
                app:layoutManager="com.kunminx.binding_recyclerview.layout_manager.WrapContentLinearLayoutManager"
                tools:listitem="@layout/adapter_todo"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv2"
                adapter="@{adapter2}"
                submitList="@{vm.aBookList}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:background="#6C8C13"
                app:layoutManager="com.kunminx.binding_recyclerview.layout_manager.WrapContentLinearLayoutManager"
                tools:listitem="@layout/adapter_abook" />


            <com.jcodecraeer.xrecyclerview.XRecyclerView
                android:id="@+id/rv3"
                adapter="@{adapter3}"
                submitList="@{vm.holeList}"
                setLoadingListener="@{vm}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:background="#11605D"
                app:layoutManager="com.kunminx.binding_recyclerview.layout_manager.WrapContentLinearLayoutManager"
                tools:listitem="@layout/adapter_hole" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv4"
                adapter="@{adapter4}"
                submitList="@{vm.diarySetList}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:background="#C61551"
                app:layoutManager="com.kunminx.binding_recyclerview.layout_manager.WrapContentLinearLayoutManager"
                tools:listitem="@layout/adapter_diary" />


        </androidx.viewpager.widget.ViewPager>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>